--- a/src/app/components/employee-dashboard-template/nav-bar/nav-bar.component.html
+++ b/src/app/components/employee-dashboard-template/nav-bar/nav-bar.component.html
@@ -1,7 +1,7 @@
 <nav>
     <h4>Employees Dashboard</h4>
     <ul>
-        <li class="active"><a href="#"><app-svg-icon [svgIconId]="'dashboard'" class="icon icon-nav"></app-svg-icon>Dashboard</a></li>
+        <li class="active"><a href="#"><app-svg-icon [svgIconId]="'apps'" class="icon icon-nav"></app-svg-icon>Dashboard</a></li>
         <li><a href="#"><app-svg-icon [svgIconId]="'users'" class="icon icon-nav"></app-svg-icon>Employees</a></li>
         <li><a href="#"><app-svg-icon [svgIconId]="'document'" class="icon icon-nav"></app-svg-icon>Request <span class="badge">12</span></a></li>
         <li><a href="#"><app-svg-icon [svgIconId]="'search'" class="icon icon-nav"></app-svg-icon>Recruitment</a></li>
