Added icons to the transaction table headers

--- a/src/app/modules/banking/components/banking-dashboard/banking-dashboard.component.scss
+++ b/src/app/modules/banking/components/banking-dashboard/banking-dashboard.component.scss
@@ -57,6 +57,12 @@ p {
       border-bottom : 3px solid #E6E6E67D;
     }
 
+    th {
+      span {
+        display: flex;
+      }
+    }
+
     td {
       & span.credit {
         color : green;
