--- a/src/app/modules/banking/components/banking-dashboard/banking-dashboard.component.css
+++ b/src/app/modules/banking/components/banking-dashboard/banking-dashboard.component.css
@@ -50,6 +50,9 @@ p {
   padding: 18px 24px;
   border-bottom: 3px solid #E6E6E67D;
 }
+.transaction-history table th span {
+  display: flex;
+}
 .transaction-history table td span.credit {
   color: green;
 }
