--- a/src/app/modules/banking/components/banking-dashboard/banking-dashboard.component.html
+++ b/src/app/modules/banking/components/banking-dashboard/banking-dashboard.component.html
@@ -33,10 +33,30 @@
     <table>
         <thead>
         <tr>
-            <th>Date</th>
-            <th>Transaction Details</th>
-            <th>Transaction Type</th>
-            <th>Amount</th>
+            <th>
+                <span>
+                    <app-svg-icon [svgIconId]="'calendar'"></app-svg-icon>
+                    Date
+                </span>
+            </th>
+            <th>
+                <span>
+                    <app-svg-icon [svgIconId]="'notebook'"></app-svg-icon>
+                    Transaction Details
+                </span>
+            </th>
+            <th>
+                <span>
+                    <app-svg-icon [svgIconId]="'filter'"></app-svg-icon>
+                    Transaction Type
+                </span>
+            </th>
+            <th>
+                <span>
+                    <app-svg-icon [svgIconId]="'money'"></app-svg-icon>
+                    Amount
+                </span>
+            </th>
             <th></th>
         </tr>
         </thead>
@@ -74,7 +94,7 @@
                 <td>Transaction Id</td>
                 <td>{{transaction.transactionId}}</td>
             </tr>
-             <tr>
+            <tr>
                 <td>Transaction Details</td>
                 <td>{{transaction.transactionDetails}}</td>
             </tr>
