Accounts page: Switch and transaction history

--- a/src/app/modules/banking/components/banking-content/banking-content.component.css
+++ b/src/app/modules/banking/components/banking-content/banking-content.component.css
@@ -1,6 +1,6 @@
 .banking-content {
   height: 100%;
-  background: #E6E6E67D;
+  background: var(--bt-border-color);
   padding: 24px 48px;
 }
 .banking-content .header {
