--- a/src/app/modules/banking/components/banking-nav/banking-nav.component.html
+++ b/src/app/modules/banking/components/banking-nav/banking-nav.component.html
@@ -5,11 +5,12 @@
     </div>
     <div class="menu-bar">
         <ul>
-            <li><a routerLinkActive="active"
+            <li><a href="#" routerLinkActive="active"
                    routerLink="dashboard">
                 <app-svg-icon [svgIconId]="'dashboard'"></app-svg-icon>
                 Dashboard</a></li>
-            <li><a href="#" routerLinkActive="active">
+            <li><a href="#" routerLinkActive="active"
+                routerLink="accounts">
                 <app-svg-icon [svgIconId]="'layers'"></app-svg-icon>
                 Accounts</a></li>
             <li><a href="#">
