--- a/src/app/modules/banking/components/banking-dashboard/banking-dashboard.component.html
+++ b/src/app/modules/banking/components/banking-dashboard/banking-dashboard.component.html
@@ -4,125 +4,47 @@
         management.</p>
 </section>
 
-<section class="summary">
-    <div>
-        <p>Current Balance</p>
-        <div class="summary-content">
-            <app-svg-icon [svgIconId]="'bank'"></app-svg-icon>
-            <h2>AUD 54,3421.09</h2>
+<section class="panel">
+    <h2>Account Summary</h2>
+    <div class="summary">
+        <div>
+            <p>Account Number</p>
+            <div class="summary-content">
+                <app-svg-icon [svgIconId]="'subtitles'"></app-svg-icon>
+                <h2>7877-8765676</h2>
+            </div>
         </div>
-    </div>
-    <div>
-        <p>Available Balance</p>
-        <div class="summary-content">
-            <app-svg-icon [svgIconId]="'bank'"></app-svg-icon>
-            <h2>AUD 34,3671.64</h2>
+        <div>
+            <p>Current Balance</p>
+            <div class="summary-content">
+                <app-svg-icon [svgIconId]="'bank'"></app-svg-icon>
+                <h2>AUD 54,3421.09</h2>
+            </div>
         </div>
-    </div>
-    <div>
-        <p>Account Type</p>
-        <div class="summary-content">
-            <app-svg-icon [svgIconId]="'umbrella'"></app-svg-icon>
-            <h2>Savings</h2>
+        <div>
+            <p>Available Balance</p>
+            <div class="summary-content">
+                <app-svg-icon [svgIconId]="'bank'"></app-svg-icon>
+                <h2>AUD 34,3671.64</h2>
+            </div>
+        </div>
+        <div>
+            <p>Account Type</p>
+            <div class="summary-content">
+                <app-svg-icon [svgIconId]="'umbrella'"></app-svg-icon>
+                <h2>Savings</h2>
+            </div>
         </div>
     </div>
 </section>
 
-<section class="transaction-history">
-    <h3>Transaction History</h3>
-    <table>
-        <thead>
-        <tr>
-            <th>
-                <span>
-                    <app-svg-icon [svgIconId]="'calendar'"></app-svg-icon>
-                    Date
-                </span>
-            </th>
-            <th>
-                <span>
-                    <app-svg-icon [svgIconId]="'notebook'"></app-svg-icon>
-                    Transaction Details
-                </span>
-            </th>
-            <th>
-                <span>
-                    <app-svg-icon [svgIconId]="'filter'"></app-svg-icon>
-                    Transaction Type
-                </span>
-            </th>
-            <th>
-                <span>
-                    <app-svg-icon [svgIconId]="'money'"></app-svg-icon>
-                    Amount
-                </span>
-            </th>
-            <th></th>
-        </tr>
-        </thead>
-        <tbody *ngIf="transactions">
-        <tr *ngFor="let transaction of transactions">
-            <td>{{ transaction.transactionDate }}</td>
-            <td>{{ transaction.transactionDetails}}</td>
-            <td>
-                <span [ngClass]="getClass(transaction.transactionType)"
-                      class="transaction-type">
-                    <app-svg-icon *ngIf="transaction.transactionType == 'Credited'"
-                                  [svgIconId]="'arrow-up'"></app-svg-icon>
-                    <app-svg-icon *ngIf="transaction.transactionType == 'Debited'"
-                                  [svgIconId]="'arrow-down'"></app-svg-icon>
-                    {{ transaction.transactionType }}
-                </span>
-            </td>
-            <td class="amount">{{ transaction.transactionAmount | currency: 'AUD ':'code'}}</td>
-            <td>
-                <a (click)="viewDetails(transaction, $event)"
-                   href="#">View details</a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+<section class="panel">
+    <h2>Transactions</h2>
+    <p>Showing recent 5 transactions</p>
+    <app-transactions [transactions]="transactions"></app-transactions>
 </section>
 
-
-<app-modal (click)="closeModal()"
-           [modalHeader]="modalHeader">
-    <div *ngIf="transaction">
-        <table class="transaction-details-table">
-            <tbody>
-            <tr>
-                <td>Transaction Id</td>
-                <td>{{transaction.transactionId}}</td>
-            </tr>
-            <tr>
-                <td>Transaction Details</td>
-                <td>{{transaction.transactionDetails}}</td>
-            </tr>
-            <tr>
-                <td>Transaction Date</td>
-                <td>{{transaction.transactionDate}}</td>
-            </tr>
-            <tr>
-                <td>Transaction Type</td>
-                <td>{{transaction.transactionType}}</td>
-            </tr>
-            <tr>
-                <td>Transaction Amount</td>
-                <td>{{transaction.transactionAmount | currency: 'AUD ': 'code'}}</td>
-            </tr>
-            <tr>
-                <td>Transaction Status</td>
-                <td>{{transaction.status}}</td>
-            </tr>
-            <tr>
-                <td>Transaction Description</td>
-                <td>{{transaction.description}}</td>
-            </tr>
-            <tr>
-                <td>Payment Service</td>
-                <td>{{transaction.paymentService}}</td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
-</app-modal>
+<section class="panel">
+    <h2>Loans</h2>
+    <p>You haven't applied for any loans</p>
+</section>
