--- a/src/app/modules/banking/components/banking-nav/banking-nav.component.css
+++ b/src/app/modules/banking/components/banking-nav/banking-nav.component.css
@@ -13,7 +13,7 @@
   height: 50px;
   width: 50px;
   border-radius: 50%;
-  background: #657AFF;
+  background: var(--bt-primary-color);
   margin-right: 12px;
 }
 .logo__bg span {
@@ -40,7 +40,7 @@
   width: 100%;
 }
 .menu-bar a.active {
-  color: #657AFF;
+  color: var(--bt-primary-color);
   font-weight: 600;
 }
 
