--- a/src/app/modules/banking/components/common/modal/modal.component.html
+++ b/src/app/modules/banking/components/common/modal/modal.component.html
@@ -17,7 +17,7 @@
         </div>
         <div class="modal-footer">
             <div class="button-container button-end">
-                <button class="btn btn-primary"
+                <button class="btn"
                         (click)="closeModal()">Close
                 </button>
             </div>
