--- a/src/app/modules/banking/components/common/modal/modal.component.scss
+++ b/src/app/modules/banking/components/common/modal/modal.component.scss
@@ -64,6 +64,7 @@
   padding        : 6px 12px;
   letter-spacing : 0.5px;
   color          : #FFFFFF;
+  background     : var(--bt-primary-color);
   cursor         : pointer;
   text-transform : uppercase;
   margin         : 6px;
