--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&display=swap');
+
+:root {
+  /*Banking template color variables*/
+  --bt-primary-color: #657AFF;
+  --bt-border-color: #E6E6E67D;
+}
 
 body {
   padding        : 0;
