Removed employee dashboard template; Added floating icon to navigate to home page;

--- a/src/app/modules/banking/components/accounts/accounts.component.html
+++ b/src/app/modules/banking/components/accounts/accounts.component.html
@@ -49,7 +49,7 @@
         You haven't applied for any loans yet.
     </div>
     <div *ngIf="isActiveTab('credits')">
-        No Credit crd information available.
+        No Credit card information available.
     </div>
 </section>
 
