--- a/src/styles.css
+++ b/src/styles.css
@@ -209,6 +209,18 @@ button svg {
   margin-right: 0;
 }
 
+.floating {
+  position: fixed;
+  bottom: 50px;
+  right: 0;
+  background: #657AFF;
+  padding: 6px;
+}
+.floating svg {
+  fill: white;
+  margin: 0;
+}
+
 /* Works on Firefox */
 * {
   scrollbar-width: thin;
