--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,19 +2,8 @@
     <h2>Click on the below buttons to view the desktop templates</h2>
 
     <div class="btn-wrapper">
-        <button (click)="showTemplate('EDT')">Employee dashboard template</button>
         <button (click)="showTemplate('ET')">Email template</button>
         <button (click)="showTemplate('BT')">Online banking web application template</button>
-    </div>
-
-    <h4>Note: These are desktop templates</h4>
-
-</div>
-<div class="wrapper" *ngIf="employeeDashboardTemplate">
-    <app-nav-bar></app-nav-bar>
-    <div class="content">
-        <app-header></app-header>
-        <app-dashboard></app-dashboard>
     </div>
 </div>
 
@@ -26,3 +15,6 @@
     <app-banking-home></app-banking-home>
 </div>
 
+<a class="floating" href="">
+    <app-svg-icon [svgIconId]="'home'"></app-svg-icon>
+</a>
