--- a/src/app/modules/banking/components/banking-nav/banking-nav.component.css
+++ b/src/app/modules/banking/components/banking-nav/banking-nav.component.css
@@ -15,13 +15,14 @@
   border-radius: 50%;
   background: var(--bt-primary-color);
   margin-right: 12px;
+  position: relative;
 }
 .logo__bg span {
-  display: inline-block;
   color: white;
-  margin: 0 auto;
-  transform: translate(32%, 65%);
   font-weight: 600;
+  position: absolute;
+  top: 14px;
+  left: 11px;
 }
 
 .menu-bar ul {
