--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,17 +1,47 @@
+.home-nav {
+  height: 40px;
+  background: linear-gradient(45deg, #AD8CF6, #FFAF7F);
+  color: #171717;
+  padding: 12px;
+  font-family: "Open Sans", sans-serif;
+}
+
 .main {
   margin: 48px;
+  display: flex;
 }
-.main h2 {
-  margin-bottom: 48px;
-}
-.main button {
-  padding: 12px;
-  border-radius: 3px;
-  border: none;
-  background: #2F2F7E;
+.main .card {
+  width: 15%;
+  box-shadow: 3px 4px 5px rgba(0, 0, 0, 0.25);
   color: white;
-  text-transform: uppercase;
+  background: #313131;
+  padding: 24px;
+  border-radius: 10px;
+  margin-right: 36px;
+}
+.main .card__heading {
+  text-align: center;
+  margin-bottom: 24px;
+  padding-bottom: 12px;
+}
+.main .card__description {
+  line-height: 24px;
+  padding-bottom: 24px;
+  margin-bottom: 24px;
+}
+.main .card button {
+  text-decoration: none;
+  padding: 12px 6px;
+  background: #808EFF;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  width: 100%;
   cursor: pointer;
+  font-family: inherit;
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 0.7px;
 }
 
 /*# sourceMappingURL=app.component.css.map */
