Account details component

--- a/src/app/modules/banking/components/account-details/account-details.component.html
+++ b/src/app/modules/banking/components/account-details/account-details.component.html
@@ -1,1 +1,44 @@
-<p>account-details works!</p>
+<h2>Account Details</h2>
+
+<section>
+    <h3>Account basics</h3>
+    <div class="details">
+        <span>Product name</span> <span>ABC Banking</span>
+    </div>
+
+    <div class="details">
+        <span>Account number</span> <span>7877-8765676</span>
+    </div>
+
+    <div class="details">
+        <span>Uncleared funds</span> <span>AUD 0.00</span>
+    </div>
+</section>
+
+<section>
+    <h3>Interest details</h3>
+    <div>
+        <h4>Last month interest received</h4>
+        <div class="details">
+            <span>Interest received</span> <span>AUD 508.09</span>
+        </div>
+    </div>
+    <div>
+        <h4>Current financial year to date</h4>
+        <div class="details">
+            <span>Interest received</span> <span>AUD 8976.09</span>
+        </div>
+    </div>
+    <div>
+        <h4>Previous financial year</h4>
+        <div class="details">
+            <span>Interest received</span> <span>AUD 5089.09</span>
+        </div>
+    </div>
+    <div>
+        <h4>Rate</h4>
+        <div class="details">
+            <span>Current interest rate</span> <span>2% p.a.</span>
+        </div>
+    </div>
+</section>
