--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -23,11 +23,13 @@
   text-align: center;
   margin-bottom: 24px;
   padding-bottom: 12px;
+  min-height: 50px;
 }
 .main .card__description {
   line-height: 24px;
   padding-bottom: 24px;
   margin-bottom: 24px;
+  min-height: 100px;
 }
 .main .card button {
   text-decoration: none;
