--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -23,12 +23,14 @@
       text-align     : center;
       margin-bottom  : 24px;
       padding-bottom : 12px;
+      min-height     : 50px;
     }
 
     &__description {
-      line-height: 24px;
+      line-height    : 24px;
       padding-bottom : 24px;
-      margin-bottom: 24px;
+      margin-bottom  : 24px;
+      min-height     : 100px;
     }
 
     button {
