Transfer and pay component; Created common service; exported the banking template css to its own css file.

--- a/src/app/modules/banking/components/account-details/account-details.component.html
+++ b/src/app/modules/banking/components/account-details/account-details.component.html
@@ -1,7 +1,7 @@
 <h2>Account Details</h2>
 
-<section>
-    <h3>Account basics</h3>
+<section class="bt_section_info">
+    <h3>Account Basics</h3>
     <div class="details">
         <span>Product name</span> <span>ABC Banking</span>
     </div>
@@ -11,28 +11,28 @@
     </div>
 
     <div class="details">
-        <span>Uncleared funds</span> <span>AUD 0.00</span>
+        <span>Uncleared funds</span> <span>INR 0.00</span>
     </div>
 </section>
 
-<section>
-    <h3>Interest details</h3>
+<section class="bt_section_info">
+    <h3>Interest Details</h3>
     <div>
         <h4>Last month interest received</h4>
         <div class="details">
-            <span>Interest received</span> <span>AUD 508.09</span>
+            <span>Interest received</span> <span>INR 508.09</span>
         </div>
     </div>
     <div>
         <h4>Current financial year to date</h4>
         <div class="details">
-            <span>Interest received</span> <span>AUD 8976.09</span>
+            <span>Interest received</span> <span>INR 8976.09</span>
         </div>
     </div>
     <div>
         <h4>Previous financial year</h4>
         <div class="details">
-            <span>Interest received</span> <span>AUD 5089.09</span>
+            <span>Interest received</span> <span>INR 5089.09</span>
         </div>
     </div>
     <div>
