--- a/src/app/modules/banking/components/banking-home/banking-home.component.html
+++ b/src/app/modules/banking/components/banking-home/banking-home.component.html
@@ -1,4 +1,4 @@
-<div class="banking container">
+<div class="bt banking container">
     <app-banking-nav></app-banking-nav>
     <app-banking-content class="banking-content-container"></app-banking-content>
 </div>
