--- a/src/app/modules/banking/components/banking-nav/banking-nav.component.html
+++ b/src/app/modules/banking/components/banking-nav/banking-nav.component.html
@@ -13,7 +13,8 @@
                 routerLink="accounts">
                 <app-svg-icon [svgIconId]="'layers'"></app-svg-icon>
                 Accounts</a></li>
-            <li><a href="#">
+            <li><a href="#" routerLinkActive="active"
+                routerLink="fundTransfer">
                 <app-svg-icon [svgIconId]="'shuffle'"></app-svg-icon>
                 Fund Transfer</a></li>
             <li><a href="#">
