--- a/src/app/modules/banking/components/accounts/accounts.component.html
+++ b/src/app/modules/banking/components/accounts/accounts.component.html
@@ -1,4 +1,4 @@
-<div class="accounts-container">
+<div class="bt_container">
     <h1>Accounts</h1>
 </div>
 
@@ -14,7 +14,7 @@
     </div>
 </section>-->
 
-<div class="radio">
+<div class="bt_radio">
     <input [(ngModel)]="tab"
            checked
            id="1"
@@ -39,20 +39,22 @@
           name="tab"
           type="radio"
           value="credits">
-    <label for="4">Credit cards</label>
+    <label for="4">Credit Cards</label>
 </div>
 
-<section>
+<section class="bt_panel">
     <app-account-details *ngIf="isActiveTab('accountDetails')"></app-account-details>
     <div  *ngIf="isActiveTab('transactions')">
-        <h2>Transaction History</h2>
+        <h2 class="bt_section_header">Transaction History</h2>
         <app-transactions [transactions]="transactions"></app-transactions>
     </div>
 
     <div *ngIf="isActiveTab('loans')">
+        <h2 class="bt_section_header">Loans</h2>
         You haven't applied for any loans yet.
     </div>
     <div *ngIf="isActiveTab('credits')">
+        <h2 class="bt_section_header">Credit Cards</h2>
         No Credit card information available.
     </div>
 </section>
