--- a/src/app/modules/banking/components/banking-nav/banking-nav.component.css
+++ b/src/app/modules/banking/components/banking-nav/banking-nav.component.css
@@ -21,8 +21,9 @@
   color: white;
   font-weight: 600;
   position: absolute;
-  top: 14px;
-  left: 11px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .menu-bar ul {
