--- a/src/app/modules/banking/components/transactions/transactions.component.css
+++ b/src/app/modules/banking/components/transactions/transactions.component.css
@@ -1,7 +1,3 @@
-.transaction-history {
-  background: white;
-  border-radius: 10px;
-}
 .transaction-history h3 {
   padding: 24px;
   border-bottom: 3px solid var(--bt-border-color);
@@ -10,10 +6,11 @@
   border-collapse: collapse;
   table-layout: fixed;
   text-align: left;
+  min-width: 100%;
 }
 .transaction-history table th, .transaction-history table td {
-  padding: 1em 3.9em;
-  border-bottom: 3px solid var(--bt-border-color);
+  padding: 1em;
+  border-bottom: 1px solid var(--bt-border-color);
 }
 .transaction-history table th span {
   display: flex;
