--- a/src/app/modules/banking/components/transactions/transactions.component.scss
+++ b/src/app/modules/banking/components/transactions/transactions.component.scss
@@ -1,7 +1,4 @@
 .transaction-history {
-  background    : white;
-  border-radius : 10px;
-
   h3 {
     padding       : 24px;
     border-bottom : 3px solid var(--bt-border-color);
@@ -11,10 +8,11 @@
     border-collapse : collapse;
     table-layout    : fixed;
     text-align      : left;
+    min-width       : 100%;
 
     th, td {
-      padding       : 1em 3.9em;
-      border-bottom : 3px solid var(--bt-border-color);
+      padding       : 1em;
+      border-bottom : 1px solid var(--bt-border-color);
     }
 
     th {
