--- a/src/app/modules/banking/components/banking-nav/banking-nav.component.html
+++ b/src/app/modules/banking/components/banking-nav/banking-nav.component.html
@@ -17,12 +17,13 @@
                 routerLink="fundTransfer">
                 <app-svg-icon [svgIconId]="'shuffle'"></app-svg-icon>
                 Fund Transfer</a></li>
-            <li><a href="#">
+            <li><a href="#"  routerLinkActive="active"
+                routerLink="cards">
                 <app-svg-icon [svgIconId]="'credit-card'"></app-svg-icon>
-                Bill payment</a></li>
+                Cards</a></li>
             <li><a href="#">
-                <app-svg-icon [svgIconId]="'time-past'"></app-svg-icon>
-                History</a></li>
+                <app-svg-icon [svgIconId]="'user'"></app-svg-icon>
+                Personal Details</a></li>
         </ul>
     </div>
 
