--- a/src/styles.css
+++ b/src/styles.css
@@ -53,6 +53,7 @@
 .bt {
   /*Common*/
   /*switch*/
+  /*Card*/
 }
 .bt_container {
   margin-bottom: 32px;
@@ -151,6 +152,45 @@
 .bt .btn-secondary {
   background: var(--bt-input-border-color);
   color: #616161;
+}
+.bt .bt_page_header {
+  margin-bottom: 24px;
+}
+.bt .card-wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 1.5em;
+}
+.bt .card {
+  background: linear-gradient(45deg, #606C88, #3F4C6B);
+  color: white;
+  padding: 1em;
+  border-radius: 5px;
+  box-shadow: 5px 5px 15px 0 rgba(0, 0, 0, 0.15);
+}
+.bt .card-content .header {
+  padding-bottom: 0.5em;
+  border-bottom: 2px solid white;
+}
+.bt .card-content ul {
+  list-style: disc;
+  padding-left: 2em;
+  margin-bottom: 0.5em;
+  min-height: 150px;
+}
+.bt .card-content li {
+  padding: 0.7em 0;
+}
+.bt .card-content a {
+  display: grid;
+  justify-content: end;
+  color: #F39E7F;
+  text-decoration: none;
+  padding: 0.2em;
+  transition: text-decoration 0.3s ease-in;
+}
+.bt .card-content a:hover {
+  text-decoration: underline;
 }
 
 :root {
