--- a/src/styles/_banking.scss
+++ b/src/styles/_banking.scss
@@ -122,4 +122,54 @@
     background : var(--bt-input-border-color);
     color      : #616161;
   }
+
+  .bt_page_header {
+    margin-bottom : 24px;
+  }
+
+  /*Card*/
+  .card-wrapper {
+    display               : grid;
+    grid-template-columns : repeat(3, 1fr);
+    grid-gap              : 1.5em;
+  }
+
+  .card {
+    background    : linear-gradient(45deg, #606C88, #3F4C6B);
+    color         : white;
+    padding       : 1em;
+    border-radius : 5px;
+    box-shadow    : 5px 5px 15px 0 rgb(0 0 0 / 15%);
+  }
+
+  .card-content {
+    .header {
+      padding-bottom : 0.5em;
+      border-bottom  : 2px solid white;
+    }
+
+    ul {
+      list-style    : disc;
+      padding-left  : 2em;
+      margin-bottom : 0.5em;
+      min-height    : 150px;
+    }
+
+    li {
+      padding : 0.7em 0;
+    }
+
+    a {
+      display         : grid;
+      justify-content : end;
+      color           : #F39E7F;
+      text-decoration : none;
+      padding         : 0.2em;
+      transition      : text-decoration 0.3s ease-in;
+    }
+
+    a:hover {
+      text-decoration : underline;
+    }
+  }
 }
