--- a/src/app/modules/banking/components/accounts/accounts.component.html
+++ b/src/app/modules/banking/components/accounts/accounts.component.html
@@ -1,5 +1,5 @@
 <div class="bt_container">
-    <h1>Accounts</h1>
+  <h1>Accounts</h1>
 </div>
 
 <!--<section>
@@ -15,47 +15,38 @@
 </section>-->
 
 <div class="bt_radio">
-    <input [(ngModel)]="tab"
-           checked
-           id="1"
-           name="tab"
-           type="radio"
-           value="accountDetails">
-    <label for="1">Account Details</label>
-    <input [(ngModel)]="tab"
-          id="2"
-          name="tab"
-          type="radio"
-          value="transactions">
-    <label for="2">Transaction History</label>
-    <input [(ngModel)]="tab"
-          id="3"
-          name="tab"
-          type="radio"
-          value="loans">
-    <label for="3">Loans</label>
-    <input [(ngModel)]="tab"
-          id="4"
-          name="tab"
-          type="radio"
-          value="credits">
-    <label for="4">Credit Cards</label>
+  <input
+    [(ngModel)]="tab"
+    checked
+    id="1"
+    name="tab"
+    type="radio"
+    value="accountDetails"
+  />
+  <label for="1">Account Details</label>
+  <input
+    [(ngModel)]="tab"
+    id="2"
+    name="tab"
+    type="radio"
+    value="transactions"
+  />
+  <label for="2">Transaction History</label>
+  <input [(ngModel)]="tab" id="3" name="tab" type="radio" value="loans" />
+  <label for="3">Loans</label>
 </div>
 
 <section class="bt_panel">
-    <app-account-details *ngIf="isActiveTab('accountDetails')"></app-account-details>
-    <div  *ngIf="isActiveTab('transactions')">
-        <h2 class="bt_section_header">Transaction History</h2>
-        <app-transactions [transactions]="transactions"></app-transactions>
-    </div>
+  <app-account-details
+    *ngIf="isActiveTab('accountDetails')"
+  ></app-account-details>
+  <div *ngIf="isActiveTab('transactions')">
+    <h2 class="bt_section_header">Transaction History</h2>
+    <app-transactions [transactions]="transactions"></app-transactions>
+  </div>
 
-    <div *ngIf="isActiveTab('loans')">
-        <h2 class="bt_section_header">Loans</h2>
-        You haven't applied for any loans yet.
-    </div>
-    <div *ngIf="isActiveTab('credits')">
-        <h2 class="bt_section_header">Credit Cards</h2>
-        No Credit card information available.
-    </div>
+  <div *ngIf="isActiveTab('loans')">
+    <h2 class="bt_section_header">Loans</h2>
+    You haven't applied for any loans yet.
+  </div>
 </section>
-
