--- a/src/app/modules/banking/components/banking-nav/banking-nav.component.html
+++ b/src/app/modules/banking/components/banking-nav/banking-nav.component.html
@@ -1,30 +1,40 @@
 <div class="side-nav">
-    <div class="logo">
-        <div class="logo__bg"><span>ABC</span></div>
-        Online Banking
-    </div>
-    <div class="menu-bar">
-        <ul>
-            <li><a href="#" routerLinkActive="active"
-                   routerLink="dashboard">
-                <app-svg-icon [svgIconId]="'dashboard'"></app-svg-icon>
-                Dashboard</a></li>
-            <li><a href="#" routerLinkActive="active"
-                routerLink="accounts">
-                <app-svg-icon [svgIconId]="'layers'"></app-svg-icon>
-                Accounts</a></li>
-            <li><a href="#" routerLinkActive="active"
-                routerLink="fundTransfer">
-                <app-svg-icon [svgIconId]="'shuffle'"></app-svg-icon>
-                Fund Transfer</a></li>
-            <li><a href="#"  routerLinkActive="active"
-                routerLink="cards">
-                <app-svg-icon [svgIconId]="'credit-card'"></app-svg-icon>
-                Cards</a></li>
-            <li><a href="#">
-                <app-svg-icon [svgIconId]="'user'"></app-svg-icon>
-                Personal Details</a></li>
-        </ul>
-    </div>
-
+  <div class="logo">
+    <div class="logo__bg"><span>ABC</span></div>
+    Online Banking
+  </div>
+  <div class="menu-bar">
+    <ul>
+      <li>
+        <a href="#" routerLinkActive="active" routerLink="dashboard">
+          <app-svg-icon [svgIconId]="'dashboard'"></app-svg-icon>
+          Dashboard</a
+        >
+      </li>
+      <li>
+        <a href="#" routerLinkActive="active" routerLink="accounts">
+          <app-svg-icon [svgIconId]="'layers'"></app-svg-icon>
+          Accounts</a
+        >
+      </li>
+      <li>
+        <a href="#" routerLinkActive="active" routerLink="fundTransfer">
+          <app-svg-icon [svgIconId]="'shuffle'"></app-svg-icon>
+          Fund Transfer</a
+        >
+      </li>
+      <li>
+        <a href="#" routerLinkActive="active" routerLink="cards">
+          <app-svg-icon [svgIconId]="'credit-card'"></app-svg-icon>
+          Cards</a
+        >
+      </li>
+      <li>
+        <a href="#" routerLinkActive="active" routerLink="details">
+          <app-svg-icon [svgIconId]="'user'"></app-svg-icon>
+          Personal Details</a
+        >
+      </li>
+    </ul>
+  </div>
 </div>
