--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,206 +1,213 @@
 /* You can add global styles to this file, and also import other style files */
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap");
 @import "styles/_banking";
 
 :root {
-  --bt-primary-color: #657AFF;
-  --bt-border-color: #E6E6E67D;
-  --bt-input-border-color : #D3D3D3;
-  --bt-background: #F3F3F3;
+  --bt-primary-color: #657aff;
+  --bt-border-color: #e6e6e67d;
+  --bt-input-border-color: #d3d3d3;
+  --bt-background: #f3f3f3;
 }
 
 body {
-  padding        : 0;
-  margin         : 0;
-  font-family    : 'Roboto', sans-serif;
-  font-size      : 16px;
-  letter-spacing : 0.5px;
+  padding: 0;
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  letter-spacing: 0.5px;
 }
 
-h1, h2, h3, h4, h5, h6, p {
-  padding : 0;
-  margin  : 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  padding: 0;
+  margin: 0;
 }
 
 h4 {
-  padding : 1rem 0.5rem;
+  padding: 1rem 0.5rem;
 }
 
 .wrapper {
-  display : flex;
+  display: flex;
 }
 
 .content {
-  display        : flex;
-  flex-direction : column;
-  padding        : 1rem 0 1rem 2rem;
-  width          : 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem 0 1rem 2rem;
+  width: 100%;
 }
 
 .icon svg {
-  height : 24px;
-  width  : 24px;
-  fill   : black;
+  height: 24px;
+  width: 24px;
+  fill: black;
 }
 
 .icon.icon-nav svg {
-  height       : 18px;
-  width        : 18px;
-  fill         : white;
-  margin-right : 12px;
-  margin-top   : 5px;
+  height: 18px;
+  width: 18px;
+  fill: white;
+  margin-right: 12px;
+  margin-top: 5px;
 }
 
 .progress svg {
-  width  : 100px;
-  height : 100px;
+  width: 100px;
+  height: 100px;
 }
 
 ul {
-  list-style : none;
-  padding    : 0;
+  list-style: none;
+  padding: 0;
 }
 
 /**Button**/
 .btn {
-  border         : none;
-  border-radius  : 3px;
-  outline        : none;
-  width          : auto;
-  padding        : 12px;
-  letter-spacing : 0.5px;
-  color          : #FFFFFF;
-  cursor         : pointer;
-  text-transform : uppercase;
-  margin         : 24px auto;
-  transition     : transform 0.2s ease;
-  font-weight    : 500;
-  display        : flex;
+  border: none;
+  border-radius: 3px;
+  outline: none;
+  width: auto;
+  padding: 12px;
+  letter-spacing: 0.5px;
+  color: #ffffff;
+  cursor: pointer;
+  text-transform: uppercase;
+  margin: 24px auto;
+  transition: transform 0.2s ease;
+  font-weight: 500;
+  display: flex;
 }
 
 .btn:active {
-  transform : scale(0.95);
+  transform: scale(0.95);
 }
 
 .btn-primary {
-  background : #2F2F7E;
+  background: #2f2f7e;
 }
 
 .btn-regular {
-  height : 40px;
+  height: 40px;
 }
 
 .btn-small {
-  height : 30px;
+  height: 30px;
 }
 
 .btn-large {
-  height : 50px;
+  height: 50px;
 }
 
 .sub-title {
-  opacity : 0.5;
+  opacity: 0.5;
 }
 
 .progress-bar {
-  width            : 100%;
-  background-color : #DDD;
-  border-radius    : 5px;
+  width: 100%;
+  background-color: #ddd;
+  border-radius: 5px;
 }
 
 .bar {
-  width         : 1%;
-  height        : 8px;
-  border-radius : 5px;
-  margin        : 18px 0;
+  width: 1%;
+  height: 8px;
+  border-radius: 5px;
+  margin: 18px 0;
 }
 
 #individual {
-  width : 100%;
+  width: 100%;
 }
 
 .menu-option {
-  padding-right : 24px;
+  padding-right: 24px;
 }
 
 .btn-menu {
-  background     : transparent;
-  border         : 1px solid rgba(0, 0, 0, 0.25);
-  border-radius  : 3px;
-  position       : relative;
-  padding        : 6px 12px;
-  cursor         : pointer;
-  display        : flex;
-  align-items    : center;
-  letter-spacing : 0.7px;
-  font-family    : sans-serif;
-  max-width      : 150px;
-  color          : black;
-  margin         : 0;
+  background: transparent;
+  border: 1px solid rgba(0, 0, 0, 0.25);
+  border-radius: 3px;
+  position: relative;
+  padding: 6px 12px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.7px;
+  font-family: sans-serif;
+  max-width: 150px;
+  color: black;
+  margin: 0;
 }
 
 .menu {
-  position      : absolute;
-  top           : 30px;
-  left          : 0;
-  width         : 150px;
-  list-style    : none;
-  margin        : 12px 0;
-  padding       : 0;
-  background    : white;
-  box-shadow    : 0 0 5px rgba(0, 0, 0, 0.25);
-  border-radius : 5px;
+  position: absolute;
+  top: 30px;
+  left: 0;
+  width: 150px;
+  list-style: none;
+  margin: 12px 0;
+  padding: 0;
+  background: white;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
 }
 
 .menu a {
-  text-decoration : none;
-  padding         : 12px;
-  display         : block;
-  text-align      : left;
-  color           : black;
-  letter-spacing  : 0.7px;
+  text-decoration: none;
+  padding: 12px;
+  display: block;
+  text-align: left;
+  color: black;
+  letter-spacing: 0.7px;
 }
 
 .menu a:hover {
-  background : rgb(225, 240, 252);
+  background: rgb(225, 240, 252);
 }
 
 .btn-menu .menu {
-  display : none;
+  display: none;
 }
 
 .btn-menu.open .menu {
-  display : block;
+  display: block;
 }
 
 svg {
-  height       : 24px;
-  width        : 24px;
-  fill         : grey;
-  margin-right : 12px;
+  height: 24px;
+  width: 24px;
+  fill: grey;
+  margin-right: 12px;
 }
 
 button svg {
-  height : 24px;
-  width  : 24px;
+  height: 24px;
+  width: 24px;
 }
 
-.search svg, .side-bar svg {
-  height       : 12px;
-  width        : 12px;
-  fill         : #191919;
-  margin-right : 6px;
+.search svg,
+.side-bar svg {
+  height: 12px;
+  width: 12px;
+  fill: #191919;
+  margin-right: 6px;
 }
 
 .title-container svg {
-  height : 24px;
-  width  : 24px;
-  fill   : #6F6194;
+  height: 24px;
+  width: 24px;
+  fill: #6f6194;
 }
 
 .sort svg {
-  fill : #6F6194;
+  fill: #6f6194;
 }
 
 .banking {
@@ -220,7 +227,7 @@ button svg {
   position: fixed;
   bottom: 50px;
   right: 0;
-  background: #657AFF;
+  background: #657aff;
   padding: 6px;
   svg {
     fill: white;
@@ -228,40 +235,19 @@ button svg {
   }
 }
 
-/* Works on Firefox */
-* {
-  scrollbar-width : thin;
-  scrollbar-color : #D7E1FF #5C5C5C;
-}
-
-/* Works on Chrome, Edge, and Safari */
-*::-webkit-scrollbar {
-  width : 6px;
-}
-
-*::-webkit-scrollbar-track {
-  background : #E7E7EF;
-}
-
-*::-webkit-scrollbar-thumb {
-  background-color : #E7E7EF;
-  border-radius    : 20px;
-  border           : 3px solid #D7E1FF;
-}
-
-@media (max-width : 500px) {
+@media (max-width: 500px) {
   nav {
-    display : none;
+    display: none;
   }
 }
 
-@media (max-width : 768px) {
+@media (max-width: 768px) {
   .first-row {
-    flex-direction : column;
+    flex-direction: column;
   }
 
   .second-row {
-    flex-direction : column;
-    margin-right   : 24px;
+    flex-direction: column;
+    margin-right: 24px;
   }
 }
