Debit card changes

--- a/src/app/modules/banking/components/debit-cards/debit-cards.component.html
+++ b/src/app/modules/banking/components/debit-cards/debit-cards.component.html
@@ -1,21 +1,42 @@
 <section class="bt_panel">
-    <div class="bt_page_header">
-        <h2 class="bt_section_header">Debit Cards</h2>
-        You haven't applied for any debit card yet.
-    </div>
+  <div class="bt_page_header">
+    <h2 class="bt_section_header">Debit Cards</h2>
+    <div class="bt_card_wrapper">
+      <div class="bt_card_holder">
+        <div class="bt_card">
+          <div class="title">ABC BANK</div>
+          <img class="chip" alt="chip" src="assets/img/chip.png" />
+          <div class="emboss number">5467 5670 7623 0945</div>
 
-    <h3 class="bt_section_header">Available Cards</h3>
-    <div class="card-wrapper">
-        <div class="card">
-            <div class="card-content">
-                <h4 class="header">FEATURED DEBIT CARDS</h4>
-                <ul>
-                    <li>Gemstone Debit Cards</li>
-                    <li>Personal Debit Cards</li>
-                </ul>
-                <a href="#">Apply Now >></a>
-            </div>
+          <div class="expiry">
+            <span class="small-type">VALID TILL</span>
+            <span class="emboss exp">10/24</span>
+          </div>
+
+          <div class="card-footer">
+            <span class="emboss name">JOHN DOE</span>
+            <img
+              class="card-logo"
+              src="assets/img/masterCardLogo.png"
+              alt="Master card logo"
+            />
+          </div>
         </div>
+      </div>
     </div>
+  </div>
 
+  <h3 class="bt_section_header">Available Cards</h3>
+  <div class="card-wrapper">
+    <div class="card">
+      <div class="card-content">
+        <h4 class="header">FEATURED DEBIT CARDS</h4>
+        <ul>
+          <li>Gemstone Debit Cards</li>
+          <li>Personal Debit Cards</li>
+        </ul>
+        <a href="#">Apply Now >></a>
+      </div>
+    </div>
+  </div>
 </section>
