--- a/src/styles.css
+++ b/src/styles.css
@@ -80,7 +80,7 @@
   display: none;
 }
 .bt_radio label {
-  padding: 1em 4.85em;
+  padding: 1em 4.5em;
   font-size: 18px;
   cursor: pointer;
 }
@@ -103,7 +103,7 @@
 }
 .bt .details {
   display: grid;
-  grid-template-columns: 30% 50%;
+  grid-template-columns: 30% 70%;
   padding: 12px 24px;
   align-items: center;
 }
@@ -192,12 +192,29 @@
 .bt .card-content a:hover {
   text-decoration: underline;
 }
+.bt .bt_details_container {
+  display: grid;
+  grid-template-columns: 30% 70%;
+  grid-gap: 2em;
+}
+.bt .bt_details_container img {
+  width: 100%;
+  margin-bottom: 32px;
+}
+.bt .bt_details_container .left-panel {
+  grid-row: 1/2;
+}
+.bt .bt_details-content {
+  background-color: white;
+  padding: 1em;
+  border-radius: 10px;
+}
 
 :root {
-  --bt-primary-color: #657AFF;
-  --bt-border-color: #E6E6E67D;
-  --bt-input-border-color: #D3D3D3;
-  --bt-background: #F3F3F3;
+  --bt-primary-color: #657aff;
+  --bt-border-color: #e6e6e67d;
+  --bt-input-border-color: #d3d3d3;
+  --bt-background: #f3f3f3;
 }
 
 body {
@@ -208,7 +225,13 @@ body {
   letter-spacing: 0.5px;
 }
 
-h1, h2, h3, h4, h5, h6, p {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
   padding: 0;
   margin: 0;
 }
@@ -260,7 +283,7 @@ ul {
   width: auto;
   padding: 12px;
   letter-spacing: 0.5px;
-  color: #FFFFFF;
+  color: #ffffff;
   cursor: pointer;
   text-transform: uppercase;
   margin: 24px auto;
@@ -274,7 +297,7 @@ ul {
 }
 
 .btn-primary {
-  background: #2F2F7E;
+  background: #2f2f7e;
 }
 
 .btn-regular {
@@ -295,7 +318,7 @@ ul {
 
 .progress-bar {
   width: 100%;
-  background-color: #DDD;
+  background-color: #ddd;
   border-radius: 5px;
 }
 
@@ -376,7 +399,8 @@ button svg {
   width: 24px;
 }
 
-.search svg, .side-bar svg {
+.search svg,
+.side-bar svg {
   height: 12px;
   width: 12px;
   fill: #191919;
@@ -386,11 +410,11 @@ button svg {
 .title-container svg {
   height: 24px;
   width: 24px;
-  fill: #6F6194;
+  fill: #6f6194;
 }
 
 .sort svg {
-  fill: #6F6194;
+  fill: #6f6194;
 }
 
 .banking svg {
@@ -407,33 +431,12 @@ button svg {
   position: fixed;
   bottom: 50px;
   right: 0;
-  background: #657AFF;
+  background: #657aff;
   padding: 6px;
 }
 .floating svg {
   fill: white;
   margin: 0;
-}
-
-/* Works on Firefox */
-* {
-  scrollbar-width: thin;
-  scrollbar-color: #D7E1FF #5C5C5C;
-}
-
-/* Works on Chrome, Edge, and Safari */
-*::-webkit-scrollbar {
-  width: 6px;
-}
-
-*::-webkit-scrollbar-track {
-  background: #E7E7EF;
-}
-
-*::-webkit-scrollbar-thumb {
-  background-color: #E7E7EF;
-  border-radius: 20px;
-  border: 3px solid #D7E1FF;
 }
 
 @media (max-width: 500px) {
