--- a/src/styles/_banking.scss
+++ b/src/styles/_banking.scss
@@ -4,194 +4,194 @@
 .bt {
   /*Common*/
   &_container {
-    margin-bottom: 32px;
+    margin-bottom : 32px;
   }
 
   &_panel {
-    background: white;
-    padding: 24px;
-    margin-bottom: 24px;
-    border-radius: 10px;
-    box-shadow: 5px 5px 15px rgb(0 0 0 / 25%);
+    background    : white;
+    padding       : 24px;
+    margin-bottom : 24px;
+    border-radius : 10px;
+    box-shadow    : 5px 5px 15px rgb(0 0 0 / 25%);
   }
 
   &_section_header,
   &_section_info {
-    margin-bottom: 24px;
+    margin-bottom : 24px;
   }
 
   /*switch*/
   &_radio {
-    display: inline-flex;
-    background: white;
-    width: auto;
-    overflow: hidden;
-    border-radius: 20px;
-    margin-bottom: 24px;
+    display       : inline-flex;
+    background    : white;
+    width         : auto;
+    overflow      : hidden;
+    border-radius : 20px;
+    margin-bottom : 24px;
 
     input {
-      display: none;
+      display : none;
     }
 
     label {
-      padding: 1em 4.5em;
-      font-size: 18px;
-      cursor: pointer;
+      padding   : 1em 4.5em;
+      font-size : 18px;
+      cursor    : pointer;
 
       &:not(:last-of-type) {
-        border-right: 1px solid var(--bt-border-color);
+        border-right : 1px solid var(--bt-border-color);
       }
     }
 
     input:checked + label {
-      background: var(--bt-primary-color);
-      color: white;
+      background : var(--bt-primary-color);
+      color      : white;
     }
   }
 
   &_section_info {
     h3 {
-      padding: 12px;
-      background: #7b85c1;
-      color: white;
-      border-radius: 5px;
-      margin-bottom: 24px;
+      padding       : 12px;
+      background    : #7B85C1;
+      color         : white;
+      border-radius : 5px;
+      margin-bottom : 24px;
     }
 
     h4 {
-      margin-left: 16px;
+      margin-left : 16px;
     }
   }
 
   .details {
-    display: grid;
-    grid-template-columns: 30% 70%;
-    padding: 12px 24px;
-    align-items: center;
+    display               : grid;
+    grid-template-columns : 30% 70%;
+    padding               : 12px 24px;
+    align-items           : center;
   }
 
   select {
-    padding: 0.5em 4em 0.5em 0.5em;
-    border-color: var(--bt-input-border-color);
-    border-radius: 5px;
-    font-size: 14px;
-    color: #616161;
+    padding       : 0.5em 4em 0.5em 0.5em;
+    border-color  : var(--bt-input-border-color);
+    border-radius : 5px;
+    font-size     : 14px;
+    color         : #616161;
   }
 
   input {
-    border: 1px solid var(--bt-input-border-color);
-    padding: 6px 12px;
-    border-radius: 5px;
-    height: 25px;
-    font-family: Roboto, sans-serif;
-    font-size: 16px;
+    border        : 1px solid var(--bt-input-border-color);
+    padding       : 6px 12px;
+    border-radius : 5px;
+    height        : 25px;
+    font-family   : Roboto, sans-serif;
+    font-size     : 16px;
   }
 
   .btn-container {
-    display: flex;
-    justify-content: space-between;
-    margin: 48px 12px;
+    display         : flex;
+    justify-content : space-between;
+    margin          : 48px 12px;
   }
 
   .button {
-    border: none;
-    border-radius: 3px;
-    outline: none;
-    width: auto;
-    padding: 12px 48px;
-    cursor: pointer;
-    text-transform: uppercase;
-    transition: transform 0.2s ease;
-    font-family: Roboto, sans-serif;
-    font-size: 16px;
+    border         : none;
+    border-radius  : 3px;
+    outline        : none;
+    width          : auto;
+    padding        : 12px 48px;
+    cursor         : pointer;
+    text-transform : uppercase;
+    transition     : transform 0.2s ease;
+    font-family    : Roboto, sans-serif;
+    font-size      : 16px;
 
     &:hover {
-      box-shadow: 5px 5px 15px 0 rgb(0 0 0 / 15%);
+      box-shadow : 5px 5px 15px 0 rgb(0 0 0 / 15%);
     }
 
     &:active {
-      transform: scale(0.95);
+      transform : scale(0.95);
     }
   }
 
   .btn-primary {
-    background: var(--bt-primary-color);
-    color: #fff;
+    background : var(--bt-primary-color);
+    color      : #FFF;
   }
 
   .btn-secondary {
-    background: var(--bt-input-border-color);
-    color: #616161;
+    background : var(--bt-input-border-color);
+    color      : #616161;
   }
 
   .bt_page_header {
-    margin-bottom: 24px;
+    margin-bottom : 24px;
   }
 
   /*Card*/
   .card-wrapper {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 1.5em;
+    display               : grid;
+    grid-template-columns : repeat(3, 1fr);
+    grid-gap              : 1.5em;
   }
 
   .card {
-    background: linear-gradient(45deg, #606c88, #3f4c6b);
-    color: white;
-    padding: 1em;
-    border-radius: 5px;
-    box-shadow: 5px 5px 15px 0 rgb(0 0 0 / 15%);
+    background    : linear-gradient(45deg, #606C88, #3F4C6B);
+    color         : white;
+    padding       : 1em;
+    border-radius : 5px;
+    box-shadow    : 5px 5px 15px 0 rgb(0 0 0 / 15%);
   }
 
   .card-content {
     .header {
-      padding-bottom: 0.5em;
-      border-bottom: 2px solid white;
+      padding-bottom : 0.5em;
+      border-bottom  : 2px solid white;
     }
 
     ul {
-      list-style: disc;
-      padding-left: 2em;
-      margin-bottom: 0.5em;
-      min-height: 150px;
+      list-style    : disc;
+      padding-left  : 2em;
+      margin-bottom : 0.5em;
+      min-height    : 150px;
     }
 
     li {
-      padding: 0.7em 0;
+      padding : 0.7em 0;
     }
 
     a {
-      display: grid;
-      justify-content: end;
-      color: #f39e7f;
-      text-decoration: none;
-      padding: 0.2em;
-      transition: text-decoration 0.3s ease-in;
+      display         : grid;
+      justify-content : end;
+      color           : #F39E7F;
+      text-decoration : none;
+      padding         : 0.2em;
+      transition      : text-decoration 0.3s ease-in;
     }
 
     a:hover {
-      text-decoration: underline;
+      text-decoration : underline;
     }
   }
 
   .bt_details_container {
-    display: grid;
-    grid-template-columns: 30% 70%;
-    grid-gap: 2em;
+    display               : grid;
+    grid-template-columns : 30% 70%;
+    grid-gap              : 2em;
 
     img {
-      width: 100%;
-      margin-bottom: 32px;
+      width         : 100%;
+      margin-bottom : 32px;
     }
 
     .left-panel {
-      grid-row: 1/2;
+      grid-row : 1/2;
     }
   }
 
   .bt_details-content {
-    background-color: white;
-    padding: 1em;
-    border-radius: 10px;
+    background-color : white;
+    padding          : 1em;
+    border-radius    : 10px;
   }
 }
