--- a/src/styles/_banking.scss
+++ b/src/styles/_banking.scss
@@ -194,4 +194,73 @@
     padding          : 1em;
     border-radius    : 10px;
   }
+
+  &_inline_error {
+    color   : #f88e94;
+    padding : 12px 0;
+  }
+
+  form {
+    .bt_inline_error {
+      grid-column: 2/3;
+    }
+  }
+
+  &_banner {
+    padding : 12px;
+    margin-bottom : 12px;
+    color: #fff;
+    border-radius: 5px;
+
+    a {
+      color: white;
+    }
+  }
+  
+  &_error_banner {
+    background : #f88e94;
+  }
+
+  &_success_banner {
+    background: #5ece5e;
+  }
+
+  p {
+    padding-bottom : 12px;
+  }
+
+  .alert {
+    display: flex;
+    align-items: center;
+
+    svg {
+      fill: white;
+    }
+  }
+
+  .alert_heading {
+    display: flex;
+    margin-bottom: 24px;
+    justify-content: center;
+
+    svg {
+      fill: white;
+    }
+  }
+
+  .alert_body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    span {
+      margin-bottom : 12px;
+    }
+  }
+
+  &_optional {
+    opacity: 0.5;
+    font-weight: 400;
+    font-style: italic;
+  }
 }
